After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630229 - Multi-row pager never shown as multi-row
Multi-row pager never shown as multi-row
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: pager
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: libwnck maintainers
libwnck maintainers
: 630642 638213 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-09-21 07:44 UTC by Theppitak Karoonboonyanan
Modified: 2011-02-01 00:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Initialize LayoutManager::display (421 bytes, patch)
2010-09-21 07:44 UTC, Theppitak Karoonboonyanan
accepted-commit_now Details | Review

Description Theppitak Karoonboonyanan 2010-09-21 07:44:19 UTC
Created attachment 170737 [details] [review]
Initialize LayoutManager::display

Multi-row pager applet is never shown as multi-row after upgrading libwnck to 2.30.4. On horizontal panel, it's always displayed as single row, no matter how many rows it's configured. On vertical panel, it's always displayed as a horizontal line of 2-pixel thick, making it almost invisible.

In an investigation in a downstream bug [1], libwnck is found to be the cause.

[1] http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=597450

"And what's wrong with 2.30.4-1 is in upstream commit bbe6f86
([core, wnckprop] Stop using gdk_display). As part of the commit,
a member 'display' has been added to LayoutManager, but is never
initialized."
Comment 1 Vincent Untz 2010-09-21 07:49:30 UTC
Comment on attachment 170737 [details] [review]
Initialize LayoutManager::display

Gah. I had this the first time, then removed this part of the patch before adding it again and forgetting this part :/ Sorry. Please commit!
Comment 2 Theppitak Karoonboonyanan 2010-09-21 07:58:22 UTC
commit c4e2408bf81f476ee29f44e44d3adaaaf06afa06
Author: Theppitak Karoonboonyanan <thep@linux.thai.net>
Date:   Tue Sep 21 14:54:11 2010 +0700

    [core] Initialize LayoutManager::display
    
    Uninitialized value caused problem with multi-row pager.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=630229

 libwnck/xutils.c |    1 +
 1 files changed, 1 insertions(+), 0 deletions(-)
Comment 3 Vincent Untz 2010-09-27 16:24:11 UTC
*** Bug 630642 has been marked as a duplicate of this bug. ***
Comment 4 Vincent Untz 2011-02-01 00:48:22 UTC
*** Bug 638213 has been marked as a duplicate of this bug. ***