[core] Initialize LayoutManager::display

Uninitialized value caused problem with multi-row pager.

https://bugzilla.gnome.org/show_bug.cgi?id=630229